add plugin and animation

--- a/lesson.html
+++ b/lesson.html
@@ -8,6 +8,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/output.css" type="text/css">
     <script
     src="https://code.jquery.com/jquery-3.3.1.js"
@@ -17,7 +18,7 @@
     <title></title>
   </head>
   <body>
-    <div class="flex-container">
+    <div class="flex-container animated fadeIn delay-0.5s">
       <div class="nav-bar">
         <div class="logo">
           <a href="index.html"><img src="https://static1.squarespace.com/static/5524448ee4b0d6f6b83ab9e2/t/57cf3de246c3c4d2933aa57c/1529949737992/?format=1500w" alt=""></a>
@@ -52,7 +53,7 @@
                   <div class="weekday-toggle" id="monday">
                     <h3>Monday <img src="img/caret.png" class="caret" alt=""></h3>
                   </div>
-                  <div class="monday-work">
+                  <div class="monday-work animated fadeIn delay-0.5s">
                     <ul>
                       <li><a href="">Journaling at Epicodus</a></li>
                       <li><a href="">Week One Journal Prompt</a></li>
@@ -101,12 +102,28 @@
                 </li>
               </ul>
               <div class="tab-content" id="myTabContent">
-                <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+                <div class="tab-pane  animated fadeIn delay-0.5s show active" id="home" role="tabpanel" aria-labelledby="home-tab">
                   <div style="padding:75% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/42530011" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
                 </div>
 
-                <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">Hey hey hey </div>
-                <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
+                <div class="tab-pane animated fadeIn delay-0.5s" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+                  <h6>My Life As A Tuxedo Cat</h6>
+
+                  <p>Scamper if it smells like fish eat as much as you wish and wack the mini furry mouse. Stare at ceiling meowing non stop for food mew. Hiding behind the couch until lured out by a feathery toy. Intently stare at the same spot sleep. It's 3am, time to create some chaos chill on the couch table or the cat was chasing the mouse refuse to drink water except out of someone's glass or the fat cat sat on the mat bat away with paws or hunt by meowing loudly at 5am next to human slave food dispenser. </p>
+
+                  <img src="img/tuxedo-cat.jpg" alt="">
+
+                  <p>Tickle my belly at your own peril i will pester for food when you're in the kitchen even if it's salad . Caticus cuteicus tickle my belly at your own peril i will pester for food when you're in the kitchen even if it's salad but hiss at vacuum cleaner. Mew bring your owner a dead bird cereal boxes make for five star accommodation sniff other cat's butt and hang jaw half open thereafter or mewl for food at 4am trip on catnip. Paw at beetle and eat it before it gets away cough furball under the bed meow for food, then when human fills food dish, take a few bites of food and continue meowing russian blue. Cereal boxes make for five star accommodation mewl for food at 4am.</p>
+
+                  <img src="img/cat-chart.jpg" alt="">
+
+                  <p>The door is opening! how exciting oh, it's you, meh spend all night ensuring people don't sleep sleep all day for always ensure to lay down in such a manner that tail can lightly brush human's nose poop in litter box, scratch the walls. Pose purrfectly to show my beauty. Headbutt owner's knee swat at dog, or bite the neighbor's bratty kid. Make muffins refuse to drink water except out of someone's glass meowwww yet groom forever, stretch tongue and leave it slightly out, blep or plays league of legends, pretend you want to go out but then don't attack dog, run away and pretend to be victim. Swat at dog scratch the box so eat an easter feather as if it were a bird then burp victoriously, but tender paw at your fat belly and this human feeds me, i should be a god for unwrap toilet paper meow. Freak human out make funny noise mow mow mow mow mow mow success now attack human try to hold own back foot to clean it but foot reflexively kicks you in face, go into a rage and bite own foot, hard, but pee in human's bed until he cleans the litter box refuse to leave cardboard box run in circles. Leave fur on owners clothes drink water out of the faucet mrow for this cat happen now, it was too purr-fect!!!</p>
+
+                  <p>so meow go back to sleep owner brings food and water tries to pet on head, so scratch get sprayed by water because bad cat. Loved it, hated it, loved it, hated it being gorgeous with belly side up for intently stare at the same spot, yet need to chase tail, but love you, then bite you or hide head under blanket so no one can see. Run outside as soon as door open stand in front of the computer screen, so gnaw the corn cob need to check on human, have not seen in an hour might be dead oh look, human is alive, hiss at human, feed me eat the rubberband reward the chosen human with a slow blink under the bed.</p>
+
+                  <p>Annoy kitten brother with poking get video posted to internet for chasing red dot but lick yarn hanging out of own butt so fight an alligator and win. Stares at human while pushing stuff off a table love blinks and purr purr purr purr yawn and spill litter box, scratch at owner, destroy all furniture, especially couch, stare at the wall, play with food and get confused by dust twitch tail in permanent irritation so sit in box.</p>
+                </div>
+                <div class="tab-pane  animated fadeIn delay-0.5s" id="contact" role="tabpanel" aria-labelledby="contact-tab">
                   <h6>Terminology</h6>
                   <p><span class="bold">Local:</span> In Git terms, local means located on the device that you are using.</p>
 
