--- a/courses.html
+++ b/courses.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/output.css" type="text/css">
     <script
     src="https://code.jquery.com/jquery-3.3.1.js"
@@ -13,7 +14,7 @@
     <title></title>
   </head>
   <body>
-    <div class="flex-container">
+    <div class="flex-container animated fadeIn delay-0.5s">
       <div class="nav-bar">
         <div class="logo">
           <a href="index.html"><img src="https://static1.squarespace.com/static/5524448ee4b0d6f6b83ab9e2/t/57cf3de246c3c4d2933aa57c/1529949737992/?format=1500w" alt=""></a>
@@ -46,7 +47,7 @@
                   <div class="weekday-toggle" id="monday">
                     <h3>Monday <img src="img/caret.png" class="caret" alt=""></h3>
                   </div>
-                  <div class="monday-work">
+                  <div class="monday-work animated fadeIn delay-0.5s">
                     <ul>
                       <li><a href="">Journaling at Epicodus</a></li>
                       <li><a href="">Week One Journal Prompt</a></li>
