--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/output.css" type="text/css">
     <title></title>
   </head>
   <body>
-    <div class="flex-container">
+    <div class="flex-container animated fadeIn delay-0.5s">
       <div class="nav-bar">
         <div class="logo">
           <a href="index.html"><img src="https://static1.squarespace.com/static/5524448ee4b0d6f6b83ab9e2/t/57cf3de246c3c4d2933aa57c/1529949737992/?format=1500w" alt=""></a>
@@ -29,7 +30,7 @@
               <li><a href="#">C#</a></li>
               <li><a href="#">Ruby/Rails</a></li>
               <li><a href="#">Ruby/React</a></li>
-              <li><a href="#">User Interfaces</a></li>
+              <li><a href="#user-interfaces-anchor">User Interfaces</a></li>
             </ul>
           </div>
         </div>
@@ -78,6 +79,7 @@
           </div>
           <div class="course row">
             <div class="course-title col-md-8">
+              <a name="user-interfaces-anchor"></a>
               <h2>User Interfaces</h2>
               <p>Front-end</p>
             </div>
